--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,7 @@ jobs:
         run: ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@3fdbbe7db44f936b1c68a46f1b6b5e40876a8ac4
         with:
           name: mi-tv-volume-restrictor-apk
           path: app/build/outputs/apk/debug/app-debug.apk
