--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,9 +26,8 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew assembleRelease
 
-      - name: Upload release APK
-        uses: actions/upload-artifact@v3
+      - name: Upload release APK (community mirror)
+        uses: dawidd6/action-upload-artifact@v2
         with:
           name: volume-restrictor-apk
           path: app/build/outputs/apk/release/app-release.apk
-      
